--- a/src/components/utils/utils.css
+++ b/src/components/utils/utils.css
@@ -114,6 +114,7 @@
   height: 36px;
   box-sizing: border-box;
   width: 100%;
+  font-size: 24px;
 }
 
 .editable-title-button {
